# osmaxx

./: .coveragerc  .dockerignore  .env-dist  .gitignore  .gitmodules  .travis.yml  0002_create_default_groups_and_permissions.py  Dockerfile  Dockerfile.frontend  Dockerfile.mediator  Dockerfile.nginx  Dockerfile.rest_api  Dockerfile.worker  LICENSE  Makefile  Osmaxx_Data_Model_v3 CAA 060416.odt  Osmaxx_Data_Model_v3 CAA 091015.odt  Osmaxx_Data_Model_v3.md  README.md  README.rst  STATISTICS  activate_local_development  build_amd_push_images.py  build_and_push_images.py  common-services.yml  common.env  common.env-dist  compose-common.yml  compose-development.yml  compose-production.yml  conftest.py  convert.py  create_documentation_pdf.sh  create_osmaxx_data_schema_pdf.sh  create_super_user.sh  docker-compose-common.yml  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose-tests.yml  docker-compose.yml  (+51 more)
Rapperswil/: rapperswil.qgs
benchmark/: polygon.poly  self-intersecting.poly
bootstrap/: Bootstrap_help  Bootstrap_help.md  Dockerfile  filter_data.sh  main-bootstrap.sh  statistics.sh
compose-env-dist/: frontend.env  mediator.env
conversion_service/: Procfile  Procfile.mediator.dev  Procfile.mediator.prod  Procfile.prod  Procfile.worker  entrypoint.sh  manage.py
converters/: __init__.py  boundaries.py  converter_settings.py  osm_cutter.py
data/: 150310-osmaxx-data.sql  testdata-osmaxx.sql
deployment/: .gitignore  Dockerfile  README.md  docker-compose.yml  osmaxxProduction.vhost  osmaxx_deployer.py  setupDatabaseAndGeoExtensions.sh  setupSoftware.sh  startApplication.sh
developmentEnvironment/: Link to Osmaxx Administration Development.desktop  Link to Osmaxx Development.desktop  README.md  Vagrantfile  osmaxx.vhost  requirements.txt  setup.sh  updateBox.sh
docker/: Dockerfile  docker-compose.prod-test.yml  entry-pointfile.sh
docs/: deployment.md  development.md  git-repository.md  index.md  osmaxx_data_schema.md  project-development-environment.md  releasing.md  testing.md  useful-commands.md
e2e/: __init__.py  e2e_tests.py
extract/: Dockerfile  README.md  excerpt.py  excerpt_help.md
fontforge_font_creator/: Dockerfile  _creator.py  creator.py  docker-compose.yml  osmaxx_v1_definition.yml  yaml_generator.py
hooks/: pre-commit
manager/: job_manager.py  rq_helper.py
osm_pbf_updater/: Dockerfile  delvelopment_download_only.sh  pbf_updater.py  update_pbf.sh
osmaxx/: Dockerfile  Procfile.dev  Procfile.prod  __init__.py  docker-entrypoint.sh  manage.py  pyproject.toml
osmaxx-docker-test-env/: docker-compose.yml
osmaxx-py/: .env-dist  .travis.yml  Procfile  Procfile.celery  Procfile.django  Procfile.django.dev  manage.py  setup.py  tox.ini
osmaxx-symbology/: readme.txt
osmaxx_conversion_service/: Procfile  Procfile.mediator.dev  Procfile.mediator.prod  Procfile.worker  docker_startup_helper.sh  manage.py  requirements.txt
osmaxx_excerpt/: Dockerfile  README.md  excerpt.py  excerpt_help  extract.sh
rest_api/: Procfile  __init__.py
(+2384 files in other folders)
